# back-end/src/routes.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express'
-import { createUserController, deleteUserController, listByCpfController, listAllController, updateUserController, } from './users';
-
-
+import { createUserController, deleteUserController, listByCpfController, listAllController, updateUserController, authenticateUserContoller, } from './users';
+import { AuthenticateUserMiddleware } from './middleware/AuthenticateUsermiddleware';
+import { AuthenticateAdminMiddleware } from './middleware/AuthenticateAdminMiddleware';
 export const routes = Router();
 
 
@@ -9,9 +9,8 @@ routes.post("/cliente", (request, response) => {
     return createUserController.handle(request, response);
 });
 
-
-routes.put("/cliente", (request, response) => {
-    return listByCpfController.handle(request, response);
+routes.post('/auth', (request, response) => {
+    return authenticateUserContoller.handle(request, response);
 });
 
 routes.delete("/cliente", (request, response) => {
@@ -25,4 +24,9 @@ routes.patch("/cliente", (request, response) => {
 routes.get("/all", (request, response) => {
     return listAllController.handle(request, response);
 });
+
+routes.put("/cliente", (request, response) => {
+    return listByCpfController.handle(request, response);
+});
+
 
